--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+* [profile] fix location used for <main> in FbleCompileTc.
+
 * Use FbleValue for FbleTc
  - Add FbleLoc to FbleValue.
  - Add constructors to FbleValue as needed to represent everything in FbleTc.
@@ -163,12 +165,6 @@
 * [eval] Have option to turn off checking for nulls and other runtime errors?
 
 * Clean up how we track io activity?
-
-* [profile] Remove special block 0
- - Add block data at the profile level representing 'total' and special case
-   that way instead. So that literally it is impossible for anyone to call
-   into the root block except via new profile thread.
- - Except... does that make for lots of messy special casing?
 
 * [profile] Cleanup
  - Switch to convention that caller is responsible for enter block?
