--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,8 @@
-* Track down memory leak.
 * Migrate All FbleTc over to FbleValue.
 * Remove FbleTc.
 * Clean up doc comments in typecheck.h, typecheck.c, compile.c.
+
+* Figure out why the memory-growth tests are failing.
 
 * Test use of undefined values in case, access, and func apply.
 * Check if it's okay to add new blocks to a profile in progress.
