--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,11 @@
  - if so, pass the profile to FbleSymbolicCompile so we can get profiling
    blocks from elaborated code too?
  - either way, document that clearly.
+* For things like FbleValueAddRef, is it okay if dst is NULL?
+ - It would be convenient for constructing things in case of error.
+ - I'm not sure if there's any performance implications.
+ - It would be nice to specify explicitly and be consistent with this kind of
+   thing.
 
 * Implement symbolic elaboration needed for Md5 DoBlock.
  By fixing failing elaborate tests. 
