--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,15 @@
+* Change Stack to be a new FbleThunkValue
+ - In preparation from separating threading management from expression
+   evaluation.
+ - To have GC keep track of values on the stack and avoid the need for
+   AbortThread.
+ - Hopefully not too atrocious for performance?
+   Current benchmark runtime: 3m18s
+
+
+* Can we merge FBLE_FUNC_VALUE_TC and FBLE_COMPILED_FUNC_VALUE_TC?
+ - by separating out a notion of FBLE_COMPILED_VALUE_TC and using FBLE_VAR_TC
+   for the scope?
 * Clean up doc comments in typecheck.h, typecheck.c, compile.c.
  - Now that we are passing value heaps around instead of arenas.
 
