Fix memory leak of stack frames.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,7 @@
-* Change Stack to be a new FbleThunkValue
- - Fix tracking of ownership in eval.c, starting from the top of the file
-   going down. Make sure to call AddRef and DelRef any time we
-   assign a value to the stack. Maybe add a helper function?
- - Remove AbortThread in a followup change.
+* Fix tests broken by change of Stack to FbleThunkValue
+ - Make sure to return fully derefed value from eval, or deref values on the
+   fly as needed in the user API.
+ - Add derefing to symbolic compilation.
  - Consider whether calling FbleValueDelRef is necessary. Seems like a lot of
    wasted work for the current implementation.
 
