Fix bug in reference tracking for thunks.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,10 @@
 * Fix tests broken by change of Stack to FbleThunkValue
  - Make sure to return fully derefed value from eval, or deref values on the
    fly as needed in the user API.
- - Consider whether calling FbleValueDelRef is necessary. Seems like a lot of
-   wasted work for the current implementation.
+ - Figure out what's up with memory growth test failure. Flaky?
+
+* Consider whether calling FbleValueDelRef is necessary. Seems like a lot of
+  wasted work for the current implementation.
 
 * Can we merge FBLE_FUNC_VALUE_TC and FBLE_COMPILED_FUNC_VALUE_TC?
  - by separating out a notion of FBLE_COMPILED_VALUE_TC and using FBLE_VAR_TC
