--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,23 @@
 * Fix tests broken by change of Stack to FbleThunkValue
- - Figure out what's up with memory growth test failure. Flaky?
+ - Figure out what's up with memory growth test failure.
+   Looks like a memory leak when running fble bench, so may be a legitimate
+   test failure.
+ - Perhaps we ought to free the tail, func, pc, and locals when we are done
+   evaluating a thunk.
+ - Is it possible we are ending up with long chains of thunks? Can we get rid
+   of those somehow?
 
 * Consider whether calling FbleValueDelRef is necessary. Seems like a lot of
   wasted work for the current implementation.
+ - I lean towards removing that api entirely, given it is currently
+   untestable. To force us to revisit it if we ever need to add it for real.
+
+* Remove or trivialize AbortThread.
+ - We should be able to simply release the stack now instead of ghost
+   executing instructions.
+
+* Separate eval.c into two different files, threading and instruction
+  execution.
 
 * Can we merge FBLE_FUNC_VALUE_TC and FBLE_COMPILED_FUNC_VALUE_TC?
  - by separating out a notion of FBLE_COMPILED_VALUE_TC and using FBLE_VAR_TC
