--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,11 @@
-* Fix tests broken by change of Stack to FbleThunkValue
- - Figure out what's up with memory growth test failure.
-   Looks like a memory leak when running fble bench, so may be a legitimate
-   test failure.
- - Perhaps we ought to free the tail, func, pc, and locals when we are done
-   evaluating a thunk.
- - Is it possible we are ending up with long chains of thunks? Can we get rid
-   of those somehow?
+* Profile before and after stack gc change to better understand the
+  performance loss.
+  - And if there's anything obvious we can do to make things better.
+  - My guess: we spent a lot of time in the GC now traversing thunks.
+  - Can we get rid of Release instructions now?
+  - How about using locals.size to store the capacity and func->code->locals
+    to store the relevant size, to avoid reallocating over and over again when
+    alternating between small and large stack frames?
 
 * Separate eval.c into two different files, threading and instruction
   execution.
