Add hwdg test for identity chain.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,10 @@
 Hwdg:
-* Finish test suite for Hwdg
+* Swap row an column for Coord@?
+* Separate gates and cells? It feels awkward to be comparing cells by layout
+  ignoring the gates.
+* Have an easier way to set a bunch of cells and gates at once, like SetGates
+  and SetCells?
+* Add simulation viewer.
 
 Exec:
 * How about using locals.size to store the capacity and func->code->locals to
