--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 Hwdg:
 * Have an easier way to set a bunch of cells and gates at once, like SetGates
   and SetCells?
-* Add simulation viewer.
+* Change Step to do updates based on original map instead of updated map?
 
 Exec:
 * How about using locals.size to store the capacity and func->code->locals to
