Minor cleanup of CallInstr function.
Avoid unnecessary duplication of code for fetching arguments.

--- a/TODO.txt
+++ b/TODO.txt
@@ -299,3 +299,6 @@ Exec:
  - Debug why map equality is failing when show shows identical maps
    { (1,1) => 1; } vs. { (1,1) => 1; }
 
+   Turns out it was a bug in map quality, not too hard to find by code
+   inspection.
+
