--- a/fblf/TODO.txt
+++ b/fblf/TODO.txt
@@ -1,4 +1,5 @@
 * Add tests for copy bits in alias case.
 * Address potential bug where we try to access out of bounds on the last
   couple words of the heap when setting the last bits in the heap?
+* Actually free bits when we call FblfFreeBits.
 
